2000-09-12  Alexandre Oliva  <aoliva@redhat.com>

	* MAINTAINERS: Added myself.

2000-09-11  Alexandre Oliva  <aoliva@redhat.com>

	* acinclude.m4 (CY_GNU_GETTEXT): Add dummy definition, so that the
	one brought in by ../bfd/acinclude.m4 prevails.
	* aclocal.m4, configure: Rebuilt.

2000-09-11  Kevin Buettner  <kevinb@redhat.com>

	* configure.in (HAVE_STRUCT_LINK_MAP32): Change test to use
	AC_TRY_COMPILE instead of AC_TRY_RUN.
	* configure: Regenerate.

2000-09-11  Kevin Buettner  <kevinb@redhat.com>

	* irix4-nat.c (fetch_core_registers): Protoize.
	* irix5-nat.c (fetch_core_registers, find_solib): Protoize.

2000-09-06  Mark Kettenis  <kettenis@gnu.org>

	* lin-lwp.c (normal_mask, blocked_mask): New variables.
	(lin_lwp_wait): Block SIGCHLD here if it isn't already blocked.
	(lin_lwp_mourn_inferior): Restore the origional signal mask, and
	reset the mask of blocked signals.
	(_initialize_lin_lwp): Don't block SIGCHLD here, but do initialize
	suspend_mask and blocked_mask.  This makes us pass
	gdb.base/sigall.exp for Linux/x86 now.
	(lin_thread_get_thread_signals): Treat the LinuxThreads "cancel"
	signal similarly to SIGCHLD in the generic code.  Avoids GDB being
	terminated by a Real-time signal.

2000-09-08  Kevin Buettner  <kevinb@redhat.com>

	* infptrace.c, infttrace.c (child_xfer_memory): Protoize.

2000-09-07  J.T. Conklin  <jtc@redback.com>

	* config/i386/nbsd.mt (TDEPFILES): Add i386nbsd-tdep.o.
	* i386nbsd-nat.c (i386nbsd_use_struct_convention): Moved from here.
	* i386nbsd-tdep.c (i386nbsd_use_struct_convention): To here.
	* i386nbsd-tdep.c: New file.

2000-09-07  Kevin Buettner  <kevinb@redhat.com>

	* i386mach-nat.c (fetch_inferior_registers, fetch_core_registers):
	Protoize.
	* i960-tdep.c (i960_skip_prologue, leafproc_return, mem): Protoize.

Thu Sep  7 21:59:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* aclocal.m4: Regenerate.
	* config.in, configure: Regenerate.

Wed Sep  6 23:15:43 2000  Andrew Cagney  <cagney@b1.cygnus.com>
